[gd_scene load_steps=43 format=3 uid="uid://dbj24unpyc041"]

[ext_resource type="Texture2D" uid="uid://du0d7wba44een" path="res://imagenes/7.png" id="1"]
[ext_resource type="Script" path="res://escenas/Control.gd" id="2"]
[ext_resource type="Texture2D" uid="uid://cshnkh157xc5v" path="res://imagenes/8.png" id="3"]
[ext_resource type="Texture2D" uid="uid://d06yinfp3a262" path="res://imagenes/1.png" id="4"]
[ext_resource type="Texture2D" uid="uid://d38thq1edxibw" path="res://imagenes/base.png" id="4_80f0q"]
[ext_resource type="AudioStream" uid="uid://xtbphbftw6bo" path="res://sounds/mistico/NTT1.wav" id="4_hxoyq"]
[ext_resource type="AudioStream" uid="uid://d300io3aev81e" path="res://sounds/mistico/NTT9.wav" id="5"]
[ext_resource type="Texture2D" uid="uid://c5qnageporbq0" path="res://imagenes/nebulaazul.jpg" id="5_nl3rg"]
[ext_resource type="AudioStream" uid="uid://bbwm0dia0t3ga" path="res://sounds/mistico/NTT6.wav" id="6"]
[ext_resource type="AudioStream" uid="uid://dabawmn58lirk" path="res://sounds/mistico/NTT2.wav" id="7"]
[ext_resource type="AudioStream" uid="uid://ba3qlmik6ea2w" path="res://sounds/mistico/NTT4.wav" id="8"]
[ext_resource type="AudioStream" uid="uid://cl7g37pksf00u" path="res://sounds/mistico/NTT5.wav" id="9"]
[ext_resource type="AudioStream" uid="uid://dxfjoij8c8a3e" path="res://sounds/mistico/NTT7.wav" id="10"]
[ext_resource type="AudioStream" uid="uid://r7xohky8vghe" path="res://sounds/mistico/NTT3.wav" id="12"]
[ext_resource type="AudioStream" uid="uid://cwovvxak620gt" path="res://sounds/mistico/NTT8.wav" id="13"]
[ext_resource type="Texture2D" uid="uid://ufb4gxbcatal" path="res://imagenes/5.png" id="15"]
[ext_resource type="Texture2D" uid="uid://hui05vwvwa6e" path="res://imagenes/2.png" id="16"]
[ext_resource type="Texture2D" uid="uid://ceiqromiv32xf" path="res://imagenes/3.png" id="17"]
[ext_resource type="FontFile" uid="uid://2clg8uws85k8" path="res://Fuentes/LCALLIG.TTF" id="18"]
[ext_resource type="Texture2D" uid="uid://dn5ekqh4pgpnn" path="res://imagenes/6.png" id="19"]
[ext_resource type="Texture2D" uid="uid://dlljn7d8pcaej" path="res://imagenes/4.png" id="20"]
[ext_resource type="Texture2D" uid="uid://8oqdqnhxqyjy" path="res://imagenes/9.png" id="21"]
[ext_resource type="Texture2D" uid="uid://to54r6bp1f1f" path="res://imagenes/higlight1024x1024.png" id="23_eknux"]

[sub_resource type="SpriteFrames" id="4"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("4")
}],
"loop": true,
"name": &"1",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": &"original",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="5"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3")
}],
"loop": true,
"name": &"2",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": &"original",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="6"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1")
}],
"loop": true,
"name": &"3",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": &"original",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("19")
}],
"loop": true,
"name": &"4",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": &"original",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="8"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("15")
}],
"loop": true,
"name": &"5",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": &"original",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="9"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("20")
}],
"loop": true,
"name": &"6",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": &"original",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="10"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("17")
}],
"loop": true,
"name": &"7",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": &"original",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="11"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("16")
}],
"loop": true,
"name": &"8",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": &"original",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="12"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("21")
}],
"loop": true,
"name": &"9",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": &"original",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="13"]

[sub_resource type="CapsuleShape2D" id="14"]

[sub_resource type="CapsuleShape2D" id="15"]

[sub_resource type="CapsuleShape2D" id="16"]

[sub_resource type="CapsuleShape2D" id="17"]

[sub_resource type="CapsuleShape2D" id="18"]

[sub_resource type="CapsuleShape2D" id="19"]

[sub_resource type="CapsuleShape2D" id="20"]

[sub_resource type="CircleShape2D" id="21"]

[sub_resource type="FontFile" id="22"]
fallbacks = Array[Font]([ExtResource("18")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/2/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/3/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/4/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/5/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/50/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/25/0 = Vector2(0, 0)
cache/0/2/0/ascent = 0.0
cache/0/2/0/descent = 0.0
cache/0/2/0/underline_position = 0.0
cache/0/2/0/underline_thickness = 0.0
cache/0/2/0/scale = 1.0
cache/0/2/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/2/0/kerning_overrides/2/0 = Vector2(0, 0)
cache/0/2/0/kerning_overrides/3/0 = Vector2(0, 0)
cache/0/2/0/kerning_overrides/4/0 = Vector2(0, 0)
cache/0/2/0/kerning_overrides/5/0 = Vector2(0, 0)
cache/0/2/0/kerning_overrides/50/0 = Vector2(0, 0)
cache/0/2/0/kerning_overrides/25/0 = Vector2(0, 0)
cache/0/3/0/ascent = 0.0
cache/0/3/0/descent = 0.0
cache/0/3/0/underline_position = 0.0
cache/0/3/0/underline_thickness = 0.0
cache/0/3/0/scale = 1.0
cache/0/3/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/3/0/kerning_overrides/2/0 = Vector2(0, 0)
cache/0/3/0/kerning_overrides/3/0 = Vector2(0, 0)
cache/0/3/0/kerning_overrides/4/0 = Vector2(0, 0)
cache/0/3/0/kerning_overrides/5/0 = Vector2(0, 0)
cache/0/3/0/kerning_overrides/50/0 = Vector2(0, 0)
cache/0/3/0/kerning_overrides/25/0 = Vector2(0, 0)
cache/0/4/0/ascent = 0.0
cache/0/4/0/descent = 0.0
cache/0/4/0/underline_position = 0.0
cache/0/4/0/underline_thickness = 0.0
cache/0/4/0/scale = 1.0
cache/0/4/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/4/0/kerning_overrides/2/0 = Vector2(0, 0)
cache/0/4/0/kerning_overrides/3/0 = Vector2(0, 0)
cache/0/4/0/kerning_overrides/4/0 = Vector2(0, 0)
cache/0/4/0/kerning_overrides/5/0 = Vector2(0, 0)
cache/0/4/0/kerning_overrides/50/0 = Vector2(0, 0)
cache/0/4/0/kerning_overrides/25/0 = Vector2(0, 0)
cache/0/5/0/ascent = 0.0
cache/0/5/0/descent = 0.0
cache/0/5/0/underline_position = 0.0
cache/0/5/0/underline_thickness = 0.0
cache/0/5/0/scale = 1.0
cache/0/5/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/5/0/kerning_overrides/2/0 = Vector2(0, 0)
cache/0/5/0/kerning_overrides/3/0 = Vector2(0, 0)
cache/0/5/0/kerning_overrides/4/0 = Vector2(0, 0)
cache/0/5/0/kerning_overrides/5/0 = Vector2(0, 0)
cache/0/5/0/kerning_overrides/50/0 = Vector2(0, 0)
cache/0/5/0/kerning_overrides/25/0 = Vector2(0, 0)
cache/0/50/0/ascent = 0.0
cache/0/50/0/descent = 0.0
cache/0/50/0/underline_position = 0.0
cache/0/50/0/underline_thickness = 0.0
cache/0/50/0/scale = 1.0
cache/0/50/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/50/0/kerning_overrides/2/0 = Vector2(0, 0)
cache/0/50/0/kerning_overrides/3/0 = Vector2(0, 0)
cache/0/50/0/kerning_overrides/4/0 = Vector2(0, 0)
cache/0/50/0/kerning_overrides/5/0 = Vector2(0, 0)
cache/0/50/0/kerning_overrides/50/0 = Vector2(0, 0)
cache/0/50/0/kerning_overrides/25/0 = Vector2(0, 0)
cache/0/25/0/ascent = 0.0
cache/0/25/0/descent = 0.0
cache/0/25/0/underline_position = 0.0
cache/0/25/0/underline_thickness = 0.0
cache/0/25/0/scale = 1.0
cache/0/25/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/25/0/kerning_overrides/2/0 = Vector2(0, 0)
cache/0/25/0/kerning_overrides/3/0 = Vector2(0, 0)
cache/0/25/0/kerning_overrides/4/0 = Vector2(0, 0)
cache/0/25/0/kerning_overrides/5/0 = Vector2(0, 0)
cache/0/25/0/kerning_overrides/50/0 = Vector2(0, 0)
cache/0/25/0/kerning_overrides/25/0 = Vector2(0, 0)

[node name="control" type="Node2D"]
position = Vector2(220, -30)
scale = Vector2(1.9, 1.9)
script = ExtResource("2")

[node name="Nebulaazul" type="Sprite2D" parent="."]
position = Vector2(504.342, 298.928)
scale = Vector2(0.326138, 0.26083)
texture = ExtResource("5_nl3rg")

[node name="steelcompleto" type="Sprite2D" parent="."]
top_level = true
position = Vector2(1167, 542)
scale = Vector2(0.38, 0.38)
texture = ExtResource("4_80f0q")

[node name="not1" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_hxoyq")
volume_db = 10.0

[node name="not2" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7")
volume_db = 10.0

[node name="not3" type="AudioStreamPlayer" parent="."]
stream = ExtResource("12")
volume_db = 10.0

[node name="not4" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8")
volume_db = 10.0

[node name="not5" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9")
volume_db = 10.0

[node name="not6" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6")
volume_db = 10.0

[node name="not7" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10")
volume_db = 10.0

[node name="not8" type="AudioStreamPlayer" parent="."]
stream = ExtResource("13")
volume_db = 10.0

[node name="not9" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5")
volume_db = 10.0

[node name="lengua1" type="AnimatedSprite2D" parent="."]
process_mode = 2
show_behind_parent = true
position = Vector2(1167, 542)
scale = Vector2(0.38, 0.38)
sprite_frames = SubResource("4")
animation = &"original"

[node name="lengua2" type="AnimatedSprite2D" parent="."]
show_behind_parent = true
position = Vector2(1167, 542)
scale = Vector2(0.38, 0.38)
sprite_frames = SubResource("5")
animation = &"original"

[node name="lengua3" type="AnimatedSprite2D" parent="."]
show_behind_parent = true
position = Vector2(1167, 542)
scale = Vector2(0.38, 0.38)
sprite_frames = SubResource("6")
animation = &"original"

[node name="lengua4" type="AnimatedSprite2D" parent="."]
show_behind_parent = true
position = Vector2(1167, 542)
scale = Vector2(0.38, 0.38)
sprite_frames = SubResource("7")
animation = &"original"

[node name="lengua5" type="AnimatedSprite2D" parent="."]
show_behind_parent = true
position = Vector2(1167, 542)
scale = Vector2(0.38, 0.38)
sprite_frames = SubResource("8")
animation = &"original"

[node name="lengua6" type="AnimatedSprite2D" parent="."]
show_behind_parent = true
position = Vector2(1167, 542)
scale = Vector2(0.38, 0.38)
sprite_frames = SubResource("9")
animation = &"original"

[node name="lengua7" type="AnimatedSprite2D" parent="."]
show_behind_parent = true
position = Vector2(1167, 542)
scale = Vector2(0.38, 0.38)
sprite_frames = SubResource("10")
animation = &"original"

[node name="lengua8" type="AnimatedSprite2D" parent="."]
show_behind_parent = true
position = Vector2(1167, 542)
scale = Vector2(0.38, 0.38)
sprite_frames = SubResource("11")
animation = &"original"

[node name="lengua9" type="AnimatedSprite2D" parent="."]
show_behind_parent = true
position = Vector2(1167, 542)
scale = Vector2(0.38, 0.38)
sprite_frames = SubResource("12")
animation = &"original"

[node name="touch1" type="TouchScreenButton" parent="."]
position = Vector2(685.263, 328.947)
rotation = -1.18857
scale = Vector2(5, 4)
shape = SubResource("13")
action = "nota1"
visibility_mode = 1

[node name="touch2" type="TouchScreenButton" parent="."]
position = Vector2(671.053, 202.105)
rotation = -2.03854
scale = Vector2(5, 3.5)
shape = SubResource("14")
action = "nota2"
visibility_mode = 1

[node name="touch3" type="TouchScreenButton" parent="."]
position = Vector2(581.579, 107.368)
rotation = -2.54644
scale = Vector2(5, 3)
shape = SubResource("15")
action = "nota3"
visibility_mode = 1

[node name="touch4" type="TouchScreenButton" parent="."]
position = Vector2(424.737, 103.158)
rotation = 2.54644
scale = Vector2(5, 3)
shape = SubResource("16")
action = "nota4"
visibility_mode = 1

[node name="touch5" type="TouchScreenButton" parent="."]
position = Vector2(331.579, 195.789)
rotation = -4.07534
scale = Vector2(5, 3.5)
shape = SubResource("17")
action = "nota5"
visibility_mode = 1

[node name="touch6" type="TouchScreenButton" parent="."]
position = Vector2(317.368, 330)
rotation = 1.21126
scale = Vector2(5, 4)
shape = SubResource("18")
action = "nota6"
visibility_mode = 1

[node name="touch7" type="TouchScreenButton" parent="."]
position = Vector2(414.737, 452.632)
rotation = 0.575959
scale = Vector2(6, 4)
shape = SubResource("19")
action = "nota7"
visibility_mode = 1

[node name="touch8" type="TouchScreenButton" parent="."]
position = Vector2(593.158, 452.632)
rotation = -0.575959
scale = Vector2(6, 4)
shape = SubResource("20")
action = "nota8"
visibility_mode = 1

[node name="touch9" type="TouchScreenButton" parent="."]
position = Vector2(504.211, 273.158)
rotation = -1.59698
scale = Vector2(9, 8)
shape = SubResource("21")
action = "nota9"
visibility_mode = 1

[node name="backmenu" type="Button" parent="."]
offset_left = -110.0
offset_top = 22.0
offset_right = 67.0
offset_bottom = 77.0
theme_override_fonts/font = SubResource("22")
theme_override_font_sizes/font_size = 25
text = "Menú"
icon = ExtResource("23_eknux")
flat = true
expand_icon = true

[connection signal="pressed" from="backmenu" to="." method="_on_backmenu_pressed"]
